# alt-veilid

./: .bumpversion.cfg  .gitattributes  .gitlab-ci.yml  BOOTSTRAP-SETUP.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Earthfile  README-pt_BR.md  README.md  RELEASING.md  clippy.toml  version_bump.sh
scripts/: clippy_all.sh  (+1 more)
veilid-cli/: Cargo.toml
veilid-cli/src/: client_api_connection.rs  command_processor.rs  interactive_ui.rs  main.rs  settings.rs  tools.rs
veilid-core/: Cargo.toml  README.md  build.rs
veilid-core/examples/basic/: .gitignore  Cargo.toml
veilid-core/examples/basic/src/: main.rs
veilid-core/proto/: veilid.capnp  veilid_capnp.rs
veilid-core/src/: attachment_manager.rs  component.rs  core_context.rs  lib.rs  stats_accounting.rs  veilid_config.rs  wasm_helpers.rs
veilid-core/src/crypto/: crypto_system.rs  envelope.rs  guard.rs  mod.rs  receipt.rs
veilid-core/src/crypto/none/: mod.rs
veilid-core/src/crypto/tests/: test_crypto.rs  test_envelope_receipt.rs  test_types.rs
veilid-core/src/crypto/types/: byte_array_types.rs  crypto_typed.rs  crypto_typed_group.rs  keypair.rs  mod.rs
veilid-core/src/crypto/vld0/: mod.rs
veilid-core/src/intf/: mod.rs
veilid-core/src/intf/native/: block_store.rs  protected_store.rs  system.rs
veilid-core/src/intf/wasm/: block_store.rs  protected_store.rs  system.rs
veilid-core/src/logging/: api_tracing_layer.rs  facilities.rs  fmt_strip_fields.rs  mod.rs  veilid_layer_filter.rs
veilid-core/src/network_manager/: address_check.rs  address_filter.rs  connection_manager.rs  connection_table.rs  debug.rs  direct_boot.rs  mod.rs  network_connection.rs  node_contact_method_cache.rs  receipt_manager.rs  relay_worker.rs  send_data.rs  stats.rs
veilid-core/src/network_manager/bootstrap/: bootstrap_record.rs  debug.rs  dial_info_converter.rs  mod.rs
veilid-core/src/network_manager/native/: discovery_context.rs  igd_manager.rs  mod.rs  network_state.rs  network_tcp.rs  network_udp.rs  start_protocols.rs
veilid-core/src/network_manager/tasks/: mod.rs  rolling_transfers.rs
veilid-core/src/network_manager/tests/: mod.rs  test_bootstrap.rs  test_connection_table.rs  test_signed_node_info.rs
veilid-core/src/network_manager/types/: address.rs  address_type.rs  dial_info_class.rs  dial_info_filter.rs  events.rs  flow.rs  low_level_protocol_type.rs  mod.rs  network_class.rs  peer_address.rs  protocol_type.rs  punishment.rs  relay_kind.rs  signal_info.rs  socket_address.rs
veilid-core/src/network_manager/wasm/: mod.rs
veilid-core/src/routing_table/: bucket.rs  bucket_entry.rs  debug.rs  find_peers.rs  geolocation.rs  mod.rs  privacy.rs  stats_accounting.rs
veilid-core/src/routing_table/node_ref/: filtered_node_ref.rs  mod.rs  node_ref_filter.rs  node_ref_lock.rs  node_ref_lock_mut.rs  traits.rs
veilid-core/src/routing_table/route_spec_store/: mod.rs  remote_private_route_info.rs  route_set_spec_detail.rs  route_spec_store_cache.rs  route_spec_store_content.rs  route_stats.rs
veilid-core/src/routing_table/routing_table_inner/: mod.rs
veilid-core/src/routing_table/tasks/: bootstrap.rs  closest_peers_refresh.rs  flush.rs  kick_buckets.rs  mod.rs  peer_minimum_refresh.rs  ping_validator.rs  private_route_management.rs  relay_management.rs  update_statistics.rs
veilid-core/src/routing_table/tests/: mod.rs  test_serialize_routing_table.rs
veilid-core/src/rpc_processor/: answer.rs  debug.rs  destination.rs  error.rs  message.rs  message_header.rs  mod.rs  operation_waiter.rs  rendered_operation.rs  rpc_app_call.rs  rpc_app_message.rs  rpc_cancel_tunnel.rs  rpc_complete_tunnel.rs  rpc_find_block.rs  rpc_find_node.rs  rpc_get_value.rs  rpc_inspect_value.rs  rpc_return_receipt.rs  rpc_route.rs  rpc_set_value.rs  rpc_signal.rs  rpc_start_tunnel.rs  rpc_status.rs  rpc_supply_block.rs  rpc_validate_dial_info.rs  rpc_value_changed.rs  rpc_watch_value.rs  rpc_worker.rs  sender_info.rs  sender_peer_info.rs
veilid-core/src/storage_manager/: debug.rs  get_value.rs  inspect_value.rs  mod.rs  rehydrate.rs  set_value.rs  storage_manager_inner.rs  watch_value.rs
veilid-core/src/table_store/: mod.rs  native.rs  table_db.rs  wasm.rs
veilid-core/src/tests/: mod.rs
veilid-core/src/veilid_api/: api.rs  debug.rs  error.rs  mod.rs  routing_context.rs
veilid-core/tests/: web.rs
veilid-flutter/linux/: CMakeLists.txt  rust.cmake
veilid-flutter/rust/: Cargo.toml
veilid-flutter/rust/src/: dart_ffi.rs
veilid-remote-api/: Cargo.toml  README.md
veilid-remote-api/src/: crypto_system.rs  lib.rs  process.rs
veilid-tools/: Cargo.toml  README.md
veilid-tools/src/: assembly_buffer.rs  async_tag_lock.rs  deferred_stream_processor.rs  event_bus.rs  eventual.rs  eventual_value.rs  eventual_value_clone.rs  future_queue.rs  hash_atom.rs  interval.rs  ip_addr_port.rs  ip_extra.rs  lib.rs  must_join_handle.rs  must_join_single_future.rs  network_result.rs  pin.rs  random.rs  sleep.rs  socket_tools.rs  spawn.rs  split_url.rs  startup_lock.rs  static_string_table.rs  tick_task.rs  timeout.rs  timeout_or.rs  timestamp.rs  tools.rs  wasm.rs
veilid-tools/src/network_interfaces/: apple.rs  mod.rs  openbsd.rs  sockaddr_tools.rs  wasm.rs  windows.rs
veilid-tools/src/tests/: mod.rs
veilid-tools/src/virtual_network/: commands.rs  machine.rs  mod.rs  router_client.rs  router_op_table.rs  serde_io_error.rs  virtual_gateway.rs  virtual_network_error.rs  virtual_tcp_listener.rs  virtual_tcp_listener_stream.rs  virtual_tcp_stream.rs  virtual_udp_socket.rs
veilid-tools/tests/: web.rs
veilid-wasm/: Cargo.toml  README.md  wasm_build.sh  wasm_remap_paths.sh  wasm_setup_check.sh  wasm_test.sh
veilid-wasm/example/test-bench/: README.md  index.html  package-lock.json  package.json  vite.config.ts
veilid-wasm/src/: lib.rs  veilid_client_js.rs  veilid_crypto_js.rs  veilid_routing_context_js.rs  veilid_table_db_js.rs  wasm_helpers.rs
veilid-wasm/tests/: .gitignore  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
veilid-wasm/tests/src/: VeilidRoutingContext.test.ts  VeilidTable.test.ts  veilidClient.test.ts  veilidCrypto.test.ts
(+242 files in other folders)
