[package]
name = "veilid-remote-api"
version = "0.4.6"
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/veilid-remote-api"
homepage = "https://veilid.gitlab.io/developer-book/"

[lib]
path = "src/lib.rs"

[dependencies]
veilid-core = { version = "0.4.6", path = "../veilid-core" }

tracing = { version = "^0", features = ["log", "attributes"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = { version = "1.0.140" }
schemars = "0.8.22"
parking_lot = "0.12.3"

[lints]
workspace = true
