[package]
# --- Bumpversion match - do not reorder
name = "veilid-wasm"
version = "0.4.4"
# ---
description = "Veilid bindings for WebAssembly"
resolver = "2"
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["veilid-core/default-wasm"]
crypto-test = ["veilid-core/crypto-test"]
footgun = ["veilid-core/footgun"]

[dependencies]
veilid-core = { version = "0.4.4", path = "../veilid-core", default-features = false }

tracing = { version = "^0", features = ["log", "attributes"] }
veilid-tracing-wasm = "^0"
tracing-subscriber = "^0"

wasm-bindgen = { version = "^0", features = ["serde-serialize"] }
console_error_panic_hook = "^0"
cfg-if = "^1"
wasm-bindgen-futures = "^0"
js-sys = "^0"
serde_json = "^1"
serde_bytes = { version = "0.11", default-features = false, features = [
  "alloc",
] }
serde = "^1"
lazy_static = "^1"
send_wrapper = "^0"
futures-util = { version = "^0" }
data-encoding = { version = "^2" }
gloo-utils = { version = "^0", features = ["serde"] }
tsify  = { version = "0.5.5", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "^0"
parking_lot = "0.12.3"

[lints]
workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
